fix: do not wrap text in ng-option (#123)
fixes https://github.com/ng-select/ng-select/issues/118

--- a/src/ng-select/ng-select.component.scss
+++ b/src/ng-select/ng-select.component.scss
@@ -236,6 +236,7 @@ ng-select {
         cursor: pointer;
         display: block;
         padding: 8px 10px;
+        @include wrapt-text;
         &:last-child {
             border-bottom-right-radius: 4px;
             border-bottom-left-radius: 4px;
